--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
+    "swr": "^0.5.3",
     "web-vitals": "^1.1.0",
     "wouter": "^2.7.3"
   },
@@ -20,7 +21,6 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/**.js",
     "lint:fix": "eslint --fix src/**/**.js"
-
   },
   "eslintConfig": {
     "extends": [
