--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
           "trailingComma": "es5",
           "printWidth": 80,
           "semi": true,
-          "parser": "flow",
-          "singleQuote": true
+          "parser": "flow"
         }
       ],
       "linebreak-style": [
@@ -99,7 +98,7 @@
       ],
       "quotes": [
         "error",
-        "single"
+        "double"
       ],
       "semi": [
         "error",
