--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "material-design-icons": "^3.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loading-skeleton": "^2.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "swr": "^0.5.3",
