--- a/package.json
+++ b/package.json
@@ -127,6 +127,8 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "fetch-mock": "^9.11.0",
+    "nock": "^13.0.11",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "react-test-renderer": "17.0.1"
